p2/scripts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2_ingress
spec:
  ingressClassName: traefik # this could be removed I think. as traefik is the default ingress used
  rules:
  - hosts: app1
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80


# setup a defaultBackend for any redirection to app3
